<resources>
    <string name="app_name">WhatMovieToday</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">What Movie Today?</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up!</string>
    <string name="log_in">Log In!</string>
    <string name="create_an_account"><u>Create an Account</u></string>
    <string name="log_out">Log Out</string>
    <string name="exit">Exit</string>
</resources>
